--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_nav_bar: ^5.0.7
   lottie:
-  url_launcher: ^6.2.5
   http: ^1.1.0
   dart_jsonwebtoken: ^2.12.1
   flutter_dotenv: ^5.1.0
+  url_launcher: ^6.1.14
+  flutter_svg: ^2.0.10
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +52,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  flutter_svg:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -66,8 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
-    - assets/images/ 
-    
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
