--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -51,4 +51,6 @@
             <data android:scheme="tel" />
         </intent>
     </queries>
+    
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
