--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_dotenv: ^5.1.0
   url_launcher: ^6.1.14
   flutter_svg: ^2.0.10
+  cloud_firestore: ^4.15.4
+  firebase_auth: ^4.18.1
+  firebase_core:
 
 dev_dependencies:
   flutter_test:
