--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,12 @@ dependencies:
   firebase_auth: ^4.18.1
   firebase_core:
 
+  # Add these new dependencies for urge surfing
+  just_audio: ^0.9.36
+  audio_session: ^0.1.18
+  firebase_messaging: ^14.7.4
+  flutter_local_notifications: ^16.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -70,6 +76,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/audio/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
