--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   just_audio: ^0.9.36
   audio_session: ^0.1.18
   firebase_messaging: ^14.7.4
+  image_picker: ^1.0.7
+  firebase_storage: ^11.6.0
 #  flutter_local_notifications: ^16.1.0
 
 dev_dependencies:
