--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
 #  flutter_local_notifications: ^16.1.0
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
 
@@ -80,6 +81,9 @@ flutter:
     - assets/images/
     - assets/audio/
 
+flutter_launcher_icons:
+  android: true
+  image: "assets/images/logo.png"
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
