--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: de_talks
+name: DeTalks
 description: "A drug de-addiction app created by team Binary Brigades for hack-a-addict hackathon."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
